--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -1,9 +1,10 @@
 // Variables
 @import 'variables';
 
-// Bootstrap
-@import 'bootstrap/scss/bootstrap';
-@import 'bootstrap-icons/font/bootstrap-icons.css';
+// UiKit
+@import "uikit/src/scss/variables-theme.scss";
+@import "uikit/src/scss/mixins-theme.scss";
+@import "uikit/src/scss/uikit-theme.scss";
 
 .brand-logo {
     width: 32px;
