migrated more files from old project

--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -6,9 +6,16 @@
 @import "uikit/src/scss/mixins-theme.scss";
 @import "uikit/src/scss/uikit-theme.scss";
 
-.gradient-1 {
-    background-image: linear-gradient( 109.6deg,  rgba(61,245,167,1) 11.2%, rgba(9,111,224,1) 91.1% );
+@import "/node_modules/@fortawesome/fontawesome-free/scss/fontawesome.scss";
+
+.hero-section {
+    background-image: linear-gradient(109.6deg, rgba(61, 245, 167, 1) 11.2%, rgba(9, 111, 224, 1) 91.1%);
     color: white;
+    padding: 4rem 0;
+}
+
+.hero-section h1 {
+    color: inherit;
 }
 
 .brand-logo {
@@ -21,42 +28,352 @@
     width: 300px;
     height: 200px;
     border: 1px solid #f1f1f1;
-    perspective: 1000px; /* Remove this if you don't want the 3D effect */
-  }
+    perspective: 1000px;
+    /* Remove this if you don't want the 3D effect */
+}
 
-  /* This container is needed to position the front and back side */
-  .flipping-card-inner {
+/* This container is needed to position the front and back side */
+.flipping-card-inner {
     position: relative;
     width: 100%;
     height: 100%;
     text-align: center;
     transition: transform 0.8s;
     transform-style: preserve-3d;
-  }
+}
 
-  /* Do an horizontal flip when you move the mouse over the flip box container */
-  .flipping-card:hover .flipping-card-inner {
+/* Do an horizontal flip when you move the mouse over the flip box container */
+.flipping-card:hover .flipping-card-inner {
     transform: rotateY(180deg);
-  }
+}
 
-  /* Position the front and back side */
-  .flipping-card-front, .flipping-card-back {
+/* Position the front and back side */
+.flipping-card-front,
+.flipping-card-back {
     position: absolute;
     width: 100%;
     height: 100%;
-    -webkit-backface-visibility: hidden; /* Safari */
+    -webkit-backface-visibility: hidden;
+    /* Safari */
     backface-visibility: hidden;
-  }
+}
 
-  /* Style the front side (fallback if image is missing) */
-  .flipping-card-front {
+/* Style the front side (fallback if image is missing) */
+.flipping-card-front {
     background-color: #bbb;
     color: black;
-  }
+}
 
-  /* Style the back side */
-  .flipping-card-back {
+/* Style the back side */
+.flipping-card-back {
     background-color: dodgerblue;
     color: white;
     transform: rotateY(180deg);
-  }
+}
+
+body,
+.page-footer {
+    min-width: 285px;
+}
+
+body,
+html {
+    height: 100%;
+}
+
+body,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+    /* background-color: #dbedeb; */
+    font-family: "Open Sans Hebrew", "Open Sans", helvetica, georgia, serif;
+    direction: rtl;
+    text-align: right;
+}
+
+a:hover {
+    text-decoration: none;
+}
+
+textarea.disable-resize {
+    resize: none;
+}
+
+.opsn {
+    font-family: "Open Sans Hebrew", "Open Sans", helvetica, georgia, serif;
+}
+
+#brand {
+    padding: 0.3em 0;
+    font-size: 1.7em;
+    font-family: "Trebuchet MS", serif;
+    font-style: italic;
+}
+
+#top-nav a:hover {
+    cursor: pointer;
+}
+
+#brand-logo {
+    vertical-align: -20%;
+}
+
+#brand-name :nth-child(1) {
+    color: rgb(134, 208, 3);
+}
+
+#brand-name :nth-child(2) {
+    color: rgba(3, 144, 220, 1);
+}
+
+/* Sticky Footer */
+#wrapper {
+    min-height: 100%;
+    height: auto !important;
+    height: 100%;
+    margin: 0 auto -52px;
+}
+
+.sticky-footer {
+    height: 52px;
+    bottom: 0;
+}
+
+.push {
+    height: 52px;
+    margin-bottom: 2em;
+}
+
+.page-footer {
+    box-sizing: border-box;
+    -webkit-box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    background: #eee;
+    padding: 1em;
+}
+
+
+.ht-field {
+    display: none;
+}
+
+.button-social-login {
+    display: block;
+    color: white;
+    padding: 1em;
+    margin: auto;
+    margin-bottom: 10px !important;
+    width: 80%;
+    border-radius: 1000px;
+}
+
+.button-social-login:hover {
+    color: white;
+    text-decoration: none;
+}
+
+.button-social-login.facebook {
+    background-color: #3b5998;
+}
+
+.button-social-login.google {
+    background-color: #dd4b39;
+}
+
+.button-social-login.facebook:hover {
+    background-color: #374782;
+}
+
+.button-social-login.google:hover {
+    background-color: #bd4332;
+}
+
+.padded {
+    padding: 1em;
+}
+
+@media (max-width: 400px) {
+    #brand-name {
+        display: none;
+    }
+}
+
+.tz-category-card,
+.tz-radius-sm {
+    border-radius: 5px;
+}
+
+.tz-category-card:hover>*,
+#side-nav * {
+    color: white !important;
+}
+
+.tz-category-card:hover,
+#side-nav>.uk-panel {
+    background-color: #00A8E6;
+}
+
+.tz-category-card:hover {
+    box-shadow: 0 0.1em 0.2em rgba(0, 0, 0, 0.5);
+}
+
+.tz-category-card:hover {
+    animation-name: category-hover;
+    animation-duration: 0.5s;
+}
+
+@keyframes category-hover {
+    from {
+        background-color: #F5F5F5;
+    }
+
+    to {
+        background-color: #00A8E6;
+    }
+}
+
+.tz-category-card img {
+    display: block;
+    margin: auto;
+    width: 128px;
+    height: 128px;
+    background-color: #fff;
+}
+
+#side-nav {
+    background: #00A8E6;
+}
+
+@media (min-width: 768px) {
+    #main-content {
+        padding: 5em 5em 5em 0;
+    }
+}
+
+#side-nav li {
+    border-color: rgb(84, 207, 255);
+}
+
+#lessons-list li.active {
+    font-weight: bold;
+    padding-right: 15px;
+    padding-bottom: 10px;
+    margin-bottom: -10px;
+
+    background-color: #00aef0;
+}
+
+.tz-text-xl {
+    font-size: 5em;
+}
+
+.tz-responsive-embed-youtube {
+    position: relative;
+    padding-bottom: 56.25%;
+    /* 16:9 Aspect Ratio */
+    padding-top: 25px;
+    height: 0;
+}
+
+.tz-responsive-embed-youtube iframe {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100% !important;
+    height: 100% !important;
+}
+
+[class*="code-"] {
+    font-family: 'Monaco', monospace;
+}
+
+.code-function {
+    color: #725600;
+    font-weight: bold;
+}
+
+.code-variable {
+    color: steelblue;
+    font-weight: bold;
+}
+
+.code-string {
+    color: darkred;
+}
+
+.code-string:before,
+.code-string:after {
+    content: '"';
+}
+
+.code-comment {
+    color: darkgreen;
+}
+
+.code-keyword,
+.code-number {
+    color: #00f;
+}
+
+.code-filename {
+    color: #D05;
+}
+
+pre>samp {
+    text-align: left;
+    direction: ltr;
+    display: block;
+}
+
+[class*="ex-"] {
+    margin-right: 0em;
+    padding-right: 1.5em;
+    border-right: 3px solid #ddd;
+}
+
+[class*="ex-"] .title {
+    font-size: 36px;
+}
+
+.ex-example {
+    border-right-color: #1E90FF;
+}
+
+.ex-example .title {
+    color: #1E90FF;
+}
+
+.ex-exercise {
+    border-right-color: #009900;
+}
+
+.ex-exercise .title {
+    color: #009900;
+}
+
+.ex-solution {
+    border-right-color: #DAA520;
+}
+
+.ex-solution .title {
+    color: #DAA520;
+}
+
+.to-top-button {
+    font-size: 48px;
+    font-weight: bold;
+    color: #00a8e6;
+    display: inline-block;
+    position: fixed;
+    bottom: -100px;
+    left: 50px;
+    padding: 10px;
+    box-sizing: content-box;
+}
+
+.math-tex {
+    font-size: 1.3em;
+}
